Update account contracts, service API, and docs